30 June 2011: Wouter
	- tag relase 1.4.11, trunk is 1.4.12 development.
	- iana portlist updated.
	- fix bug#395: id bits of other query may leak out under conditions
	- fix replyaddr count wrong after jostled queries, which leads to
	  eventual starvation where the daemon has no replyaddrs left to use.

23 June 2011: Wouter
	- Changed -flto check to support clang compiler.
	- tag 1.4.11rc3 created.

17 June 2011: Wouter
	- tag 1.4.11rc1 created.
	- remove warning about signed/unsigned from flex (other flex version).
	- updated aclocal.m4 and libtool to match.
	- tag 1.4.11rc2 created.

16 June 2011: Wouter
	- log-queries: yesno option, default is no, prints querylog.
	- version is 1.4.11.

14 June 2011: Wouter
	- Use -flto compiler flag for link time optimization, if supported.
	- iana portlist updated.

12 June 2011: Wouter
	- IPv6 service address for d.root-servers.net (2001:500:2D::D).

10 June 2011: Wouter
	- unbound-control has version number in the header,
	  UBCT[version]_space_ is the header sent by the client now.
	- Unbound control port number is registered with IANA:
	  ub-dns-control  8953/tcp    unbound dns nameserver control
	  This is the new default for the control-port config setting.
	- statistics-interval prints the number of jostled queries to log.

30 May 2011: Wouter
	- Fix Makefile for U in environment, since wrong U is more common than
	  deansification necessity.
	- iana portlist updated.
	- updated ldns tarball to 1.6.10rc2 snapshot of today.

25 May 2011: Wouter
	- Fix assertion failure when unbound generates an empty error reply
	  in response to a query, CVE-2011-1922 VU#531342.
	- This fix is in tag 1.4.10.
	- defense in depth against the above bug, an error is printed to log
	  instead of an assertion failure.

10 May 2011: Wouter
	- bug#386: --enable-allsymbols option links all binaries to libunbound
	  and reduces install size significantly.
	- feature, ignore-cd-flag: yesno to provide dnssec to legacy servers.